# rag-eval-harness

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: eval_set.jsonl
scripts/: fetch_pg_essays.py  run_eval.py
src/: chat.py  eval.py  ingest.py  query.py
tests/: test_chunking.py
